feat: upgrade Line Bot API from v2 to v3, extend OpenAI API functionality for conversation content, and draft new features
- Upgraded Line Bot API from version 2 to version 3
- Extended the functionality of the OpenAI API for handling conversation content
- Added draft implementations for upcoming features

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [imgur_api]
-Client_ID = 4f482c4291e2d9f
-Client_Secret = 0222bd385a4b343520ba15f5c7b5afc5f40019a0
+Client_ID = 8e00c72bd74e5d7
+; Client_Secret = 9b3cc403fee3a17fc2b30f2e558a880096830dc1
+Client_Secret = 7589f795fedcce4c887e9102e5c7b2f9143912e6
 Album_ID = TKM5s
 
 [other_api]
