--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ beautifulsoup4 = "*"
 line-bot-sdk = "*"
 imgurpython = "*"
 psycopg2-binary = "*"
-Flask = "*"
+flask = {extras = ["async"], version = "*"}
 Flask-Assets = "*"
 Flask-Babel = "*"
 Flask-Script = "*"
@@ -33,11 +33,11 @@ supabase = "*"
 pyimgur = "*"
 httpx = "*"
 httpcore = "*"
+python-dotenv = "*"
 
 [dev-packages]
 pytest = "*"
 pytest-mock = "*"
-python-dotenv = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.13"
