refactor(框架): 將專案從 Flask 遷移至 Django
本次為重大重構，將整個 Line Bot 應用程式從 Flask 微框架遷移至 Django 框架。目的是為了利用 Django 內建的強大功能、MTV 架構及其豐富的生態系，以獲得更好的擴展性與可維護性。

主要變更包含：
- 以標準的 Django 專案結構 (`anya_project`) 及一個獨立的 App (`line_bot`) 取代了單體式的 `app.py`。
- 為了遵循 Django 的設計模式，將舊有 `services/` 目錄及 `handlers.py` 中的所有業務邏輯，全部遷移至 `line_bot` App 中。
- 將所有設定集中到 `anya_project/settings.py`，並移除舊的 `config.py`。
- 實作了 Django 的密鑰管理最佳實踐，所有敏感金鑰（SECRET_KEY、各類 API 金鑰等）皆改為從環境變數讀取。
- 新增了 `.env.example` 檔案以說明必要的環境變數，並更新 `.gitignore` 以排除 `db.sqlite3`。
- 更新 `Pipfile`，移除了 Flask 相關的依賴套件，並加入 Django。
- 修改 `Procfile`，使其使用 Gunicorn 配合 Django 的 WSGI 應用程式入口點來啟動。

--- a/Pipfile
+++ b/Pipfile
@@ -4,42 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-alembic = "*"
-click = "*"
-httplib2 = "*"
-itsdangerous = "*"
-oauth2 = "*"
-pycparser = "*"
-python-editor = "*"
-requests = "*"
-webassets = "*"
-gunicorn = "*"
-beautifulsoup4 = "*"
-line-bot-sdk = "*"
-imgurpython = "*"
-psycopg2-binary = "*"
-flask = {extras = ["async"], version = "*"}
-Flask-Assets = "*"
-Flask-Babel = "*"
-Flask-Script = "*"
-Jinja2 = "*"
-Mako = "*"
-MarkupSafe = "*"
-Werkzeug = "*"
-gspread = "*"
-oauth2client = "*"
-openai = "*"
-supabase = "*"
-pyimgur = "*"
-httpx = "*"
-httpcore = "*"
+django = "*"
 python-dotenv = "*"
+line-bot-sdk = "*"
+openai = "*"
+supabase = {extras = ["async"], version = "*"}
+imgurpython = {extras = ["async"], version = "*"}
+httpx = "*"
 playwright = "*"
+beautifulsoup4 = "*"
 lxml = "*"
 
 [dev-packages]
-pytest = "*"
-pytest-mock = "*"
 
 [requires]
 python_version = "3.13"
